# transposition-cipher

./: .gitignore  Pipfile  README.md  const.py  decode.py  encode.py  main.py  prof.py  pyproject.toml  read.py  utils.py
data/: ru-bigram-coefs.csv
scripts/: ping-pong.sh
src/t_cipher/: __init__.py  __main__.py  cli.py  config.py  decode.py  encode.py  parse.py  prof.py  utils.py
tests/: test_batched.py  test_encode.py  test_pad_right.py  test_read.py
tests/files/: bigrams_s.csv
