[tool.poetry]
name = "t_cipher"
version = "0.1.0"
description = "Transposition cipher encoder/decoder"
authors = ["Ivan Peshekhonov <m1901199@edu.misis.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
snakeviz = "^2.2.0"

[tool.poetry.scripts]
t_cipher = "t_cipher:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
